# newtons-fractal

./: Cargo.toml  README.md
src/: app.rs  complex.rs  helpers.rs  main.rs  math.rs  polynomial.rs  types.rs
src/app/: appsettings.rs  constants.rs  draw.rs  helpers.rs  inputs.rs  mainapp.rs  types.rs  util.rs
src/math/: complex.rs  helpers.rs  polynomial.rs
