[package]
name = "newtons_fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston2d-graphics = "0.41.0"
piston2d-opengl_graphics = "0.79.0"
image = "0.23.14"
piston_window = "0.121.0"
gfx_device_gl = "0.16.2"